Add cGroup memory limit support